--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,10 +6,12 @@ body {
 }
 
 .swiper-button-prev {
-  background-image: url('../assets/leftCircleArrow.png') !important;
+  background-image: url('../assets/LeftArrow.png') !important;
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
+  height:50px !important;
+  width:50px  !important;
 }
 
 .swiper-button-prev::after {
@@ -17,10 +19,12 @@ body {
 }
 
 .swiper-button-next {
-  background-image: url('../assets/rightCircleArrow.png') !important;
+  background-image: url('../assets/RightArrow.png') !important;
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
+  height:50px !important;
+  width:50px  !important;
 }
 
 .swiper-button-next::after {
