--- a/src/components/MobileCmpt/MobileHeroSectionCmpt/styles.css
+++ b/src/components/MobileCmpt/MobileHeroSectionCmpt/styles.css
@@ -1,3 +1,28 @@
+/* .swiper-button-prev {
+  background-image: url('../../../assets/LeftArrow.png') !important;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center;
+  height:35px !important;
+  width:35px  !important; 
+} 
+.swiper-button-prev::after { 
+  display: none; 
+} 
+
+.swiper-button-next { 
+  background-image: url('../../../assets/RightArrow.png') !important; 
+  background-repeat: no-repeat; 
+  background-size: 100% auto; 
+  background-position: center; 
+  height:35px !important;
+  width:35px  !important; 
+}
+
+ .swiper-button-next::after { 
+  display: none; 
+ }  */
+
 #app {
     height: 100%;
   }
@@ -38,4 +63,5 @@
     height: 100%;
     object-fit: cover;
   }
+  
   
